--- a/Lab_01/Lab_01.App/Lab_01.App.csproj
+++ b/Lab_01/Lab_01.App/Lab_01.App.csproj
@@ -18,4 +18,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Lab_01.Core\Lab_01.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="squares.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
