--- a/Lab_01/Lab_01.App/Lab_01.App.csproj
+++ b/Lab_01/Lab_01.App/Lab_01.App.csproj
@@ -12,6 +12,9 @@
     </AvaloniaResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.9.0" />
     <PackageReference Include="Avalonia.Desktop" Version="0.9.0" />
   </ItemGroup>
