--- a/Lab_01/Lab_01.App/Lab_01.App.csproj
+++ b/Lab_01/Lab_01.App/Lab_01.App.csproj
@@ -15,8 +15,9 @@
     <None Include="..\..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.9.0" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.9.0" />
+      <PackageReference Include="Avalonia" Version="0.9.6"/>
+      <PackageReference Include="Avalonia.Desktop" Version="0.9.6"/>
+      <PackageReference Include="MessageBox.Avalonia" Version="0.9.6.1"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lab_01.Core\Lab_01.Core.csproj" />
