--- a/Lab_03/Lab_03.App/Lab_03.App.csproj
+++ b/Lab_03/Lab_03.App/Lab_03.App.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <Compile Update="**\*.xaml.cs">
@@ -17,7 +18,6 @@
     <PackageReference Include="MessageBox.Avalonia" Version="0.9.6.1"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Lab_02.Core\Lab_02.Core.csproj"/>
     <ProjectReference Include="..\Lab_03.Core\Lab_03.Core.csproj"/>
   </ItemGroup>
 </Project>
