--- a/Lab_03/Lab_03.Core/Lab_03.Core.csproj
+++ b/Lab_03/Lab_03.Core/Lab_03.Core.csproj
@@ -2,6 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Update="var1.txt">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 
 </Project>
