--- a/Lab_01/Lab_01.App/Lab_01.App.csproj
+++ b/Lab_01/Lab_01.App/Lab_01.App.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Compile Update="**\*.xaml.cs">
@@ -12,9 +12,9 @@
     </AvaloniaResource>
   </ItemGroup>
   <ItemGroup>
-      <PackageReference Include="Avalonia" Version="0.9.6" />
-      <PackageReference Include="Avalonia.Desktop" Version="0.9.6" />
-      <PackageReference Include="MessageBox.Avalonia" Version="0.9.6.1" />
+      <PackageReference Include="Avalonia" Version="0.10.6" />
+      <PackageReference Include="Avalonia.Desktop" Version="0.10.6" />
+      <PackageReference Include="MessageBox.Avalonia" Version="1.5.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lab_01.Core\Lab_01.Core.csproj" />
