--- a/Lab_03/Lab_03.App/Lab_03.App.csproj
+++ b/Lab_03/Lab_03.App/Lab_03.App.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
@@ -13,11 +13,11 @@
     </AvaloniaResource>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.9.6"/>
-    <PackageReference Include="Avalonia.Desktop" Version="0.9.6"/>
-    <PackageReference Include="MessageBox.Avalonia" Version="0.9.6.1"/>
+    <PackageReference Include="Avalonia" Version="0.10.6" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.10.6" />
+    <PackageReference Include="MessageBox.Avalonia" Version="1.5.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Lab_03.Core\Lab_03.Core.csproj"/>
+    <ProjectReference Include="..\Lab_03.Core\Lab_03.Core.csproj" />
   </ItemGroup>
 </Project>
