--- a/Lab_03/Lab_03.Core.Tests/Lab_03.Core.Tests.csproj
+++ b/Lab_03/Lab_03.Core.Tests/Lab_03.Core.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
 
         <IsPackable>false</IsPackable>
 
@@ -9,13 +9,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="nunit" Version="3.12.0"/>
-        <PackageReference Include="NUnit3TestAdapter" Version="3.15.1"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0"/>
+        <PackageReference Include="nunit" Version="3.13.2" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Lab_03.Core\Lab_03.Core.csproj"/>
+        <ProjectReference Include="..\Lab_03.Core\Lab_03.Core.csproj" />
     </ItemGroup>
 
 </Project>
